gitops/generated/meet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet
  namespace: meet

spec:
  replicas: 1

  selector:
    matchLabels:
      app: meet

  template:
    metadata:
      labels:
        app: meet

    spec:
      containers:
      - name: meet

        image: jitsi/web:stable

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 30
          periodSeconds: 20
