gitops/generated/meet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meet

spec:
  selector:
    app: meet

  ports:
  - name: http
    port: 80
    targetPort: 80

  type: ClusterIP
