gitops/generated/meet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet
  namespace: meet

spec:
  ingressClassName: traefik

  rules:
  - host: meet.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: meet
            port:
              number: 80
